fix: removed hardcoded messages, and fixed collapsing message container

--- a/public/style.css
+++ b/public/style.css
@@ -49,6 +49,7 @@ body {
 .message-container {
     display: flex;
     flex-direction: column;
+    justify-content: flex-end;
     background-color: #f6f6f6;
     width: 400px;
     height: 600px;
